* * fixed forgotten JS localizations in loginpage * visual cleanup of installer * fixed unescaped texts in installer

--- a/install/locale/installer.xml
+++ b/install/locale/installer.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <locallang>
 	<labels lang="en">
+		<label index="panelWidget.title.progress">Steps of Installation</label>
 		<label index="type.install">todoyu Installation</label>
 		<label index="type.update">todoyu Update</label>
 		<label index="install.eula">End user license agreement for todoyu</label>
-		<label index="install.lgpl">The following third party libraries are licensed under LGPL v2.1:</label>
+		<label index="install.lgpl">The following third party libraries are licensed under LGPL v2.1</label>
 		<label index="install.title">todoyu installer</label>
 		<label index="install.button">I accept, install todoyu</label>
 		<label index="install.text">Welcome to the todoyu installer!</label>
@@ -75,13 +76,12 @@
 		<label index="finishupdate.button">Disable installer and go to login</label>
 		<label index="finishupdate.text">Installer has updated your todoyu installation</label>
 		<label index="finishupdate.step">Finish installation</label>
-
+		<label index="selectDB">Select a Database</label>
+		<label index="orCreateDB">or create new:</label>
 <!--
 		<label index="installationSteps">Installation steps</label>
 		<label index="servercheckResults">Results of server check:</label>
 		<label index="yourVersion">Your Version:</label>
-		<label index="selectDB">Select a Database</label>
-		<label index="orCreateDB">or create new:</label>
 		<label index="dbConnectionStored">DB connection is stored.</label>
 		<label index="importTablesAndData">Import database tables and basic table data</label>
 		<label index="repeatPassword">Repeat Password</label>
@@ -147,16 +147,17 @@
 -->
 	</labels>
 	<labels lang="de">
+		<label index="panelWidget.title.progress">Installationsschritte</label>
 		<label index="type.install">todoyu Installation</label>
 		<label index="type.update">todoyu Aktualisierung</label>
 		<label index="install.eula">Benutzer-Vereinbarung für todoyu</label>
-		<label index="install.lgpl">Folgende Dritt-Bibliotheken sind unter LGPL v2.1 lizensiert:</label>
+		<label index="install.lgpl">Folgende Dritt-Bibliotheken sind unter LGPL v2.1 lizensiert</label>
 		<label index="install.title">todoyu Installer</label>
-		<label index="install.button">Ich stimme zu, todoyu jetzt Installieren</label>
-		<label index="install.text">Willkommen zum todoyu Installer!</label>
-		<label index="install.step">todoyu Benutzerlizens</label>
+		<label index="install.button">Ich stimme zu, todoyu jetzt installieren</label>
+		<label index="install.text">Willkommen zur Installation von todoyu!</label>
+		<label index="install.step">todoyu Benutzerlizenz</label>
 		<label index="servercheck.title">Server-Überprüfung</label>
-		<label index="servercheck.button">Datenbankkonfiguration Einrichten</label>
+		<label index="servercheck.button">Datenbankkonfiguration vornehmen</label>
 		<label index="servercheck.yourphpversion">Ihre Version</label>
 		<label index="servercheck.yourphpversion.ok">OK</label>
 		<label index="servercheck.yourphpversion.error">ZU NIEDRIG</label>
@@ -164,62 +165,64 @@
 		<label index="servercheck.writable">schreibbar</label>
 		<label index="servercheck.notWritable">NICHT SCHREIBBAR</label>
 		<label index="servercheck.ready">Server ist bereit für todoyu 2.0</label>
-		<label index="servercheck.notReady">Server is NOT ready for todoyu 2.0</label>
-		<label index="servercheck.step">Server Prüfen</label>
-		<label index="dbconnection.title">Datenbank-Server Anbindung Einrichten</label>
-		<label index="dbconnection.button">Datenbankkonfiguration Aktualisieren</label>
+		<label index="servercheck.notReady">Server ist NICHT bereit für todoyu 2.0</label>
+		<label index="servercheck.step">Server prüfen</label>
+		<label index="dbconnection.title">Datenbankserver Anbindung einrichten</label>
+		<label index="dbconnection.button">Datenbankkonfiguration speichern</label>
 		<label index="dbconnection.server">Server</label>
 		<label index="dbconnection.username">Benutzername</label>
 		<label index="dbconnection.password">Passwort</label>
-		<label index="dbconnection.text">Datenbankverbindungsdaten Eingeben</label>
-		<label index="dbconnection.step">DB-Verbindung Einrichten</label>
+		<label index="dbconnection.text">Datenbankverbindungsdaten eingeben</label>
+		<label index="dbconnection.step">DB-Verbindung einrichten</label>
 		<label index="dbselect.title">Datenbank auswählen</label>
-		<label index="dbselect.button">Datenbank-Einstellungen Speichern</label>
-		<label index="dbselect.text.saved">Datenbank-Verbindung gespeichert</label>
+		<label index="dbselect.button">Datenbank-Einstellungen speichern</label>
+		<label index="dbselect.text.saved">Datenbankverbindung gespeichert</label>
 		<label index="dbselect.text.notCreated">Neue Datenbank kann nicht erstellt werden</label>
 		<label index="dbselect.text.dbNameExists">Ein andere Datenbank dieses Namens existiert bereits</label>
 		<label index="dbselect.step">Datenbank wählen</label>
-		<label index="importtables.title">Tabellen und Daten Importieren</label>
-		<label index="importtables.button">Tabellen und Daten Importieren</label>
+		<label index="importtables.title">Tabellen und Daten importieren</label>
+		<label index="importtables.button">Tabellen und Daten importieren</label>
 		<label index="importtables.coretables">TODOYU CORE DATENBANKTABELLEN</label>
 		<label index="importtables.exttables">TODOYU EXTENSION DATENBANKTABELLEN</label>
-		<label index="importtables.step">Datenbank-Tabellen Importieren</label>
+		<label index="importtables.step">Datenbanktabellen importieren</label>
 		<label index="systemconfig.title">todoyu Systemeinstellungen</label>
-		<label index="systemconfig.button">Systemeinstellungen Speichern</label>
+		<label index="systemconfig.button">Systemeinstellungen speichern</label>
 		<label index="systemconfig.systemName">System-Name</label>
 		<label index="systemconfig.systemEmail">System-Email</label>
 		<label index="systemconfig.language">Sprache</label>
 		<label index="systemconfig.locale">Locale</label>
-		<label index="systemconfig.text">todoyu System-Einstellungen wählen</label>
+		<label index="systemconfig.text">todoyu System-Einstellungen vornehmen</label>
 		<label index="systemconfig.text.error">Bitte System-Name und -Email angeben</label>
-		<label index="systemconfig.step">System Konfigurieren</label>
-		<label index="adminpassword.title">Administratoren-Password Ändern</label>
-		<label index="adminpassword.button">Administratoren-Password Ändern</label>
+		<label index="systemconfig.step">System konfigurieren</label>
+		<label index="adminpassword.title">Administratoren-Password ändern</label>
+		<label index="adminpassword.button">Administratoren-Password ändern</label>
 		<label index="adminpassword.username">Benutzername</label>
 		<label index="adminpassword.password">Passwort</label>
-		<label index="adminpassword.repeatPassword">Passwort Wiederholen</label>
+		<label index="adminpassword.repeatPassword">Passwort wiederholen</label>
 		<label index="adminpassword.passwordHint">mindestestenz 5 Zeichen</label>
 		<label index="adminpassword.step">Administratoren-Passwort festlegen</label>
 		<label index="finish.title">Installation beendet</label>
 		<label index="finish.text">Installation beendet</label>
-		<label index="finish.button">Installer Deaktivieren und weiter zum Login</label>
-		<label index="finishupdate.button">Installer Deaktivieren und weiter zum Login</label>
+		<label index="finish.button">Installer deaktivieren und weiter zum Login</label>
+		<label index="finishupdate.button">Installer deaktivieren und weiter zum Login</label>
 		<label index="finish.step">Installation abschliessen</label>
 		<label index="finishupdate.step">Installation abschliessen</label>
 		<label index="update.title">todoyu Versions-Aktualisierung</label>
-		<label index="update.button">Systemdatenbanken Aktualisieren</label>
-		<label index="update.info">Datenbank-Änderungen der vorliegenden Version durchführen und mit Datei-Konfiguration Vergleichen</label>
-		<label index="update.step">todoyu Installation Aktualisieren</label>
-		<label index="updatetocurrentversion.title">Datenbank Aktualisieren</label>
-		<label index="updatetocurrentversion.button">Datenbank-Änderungen Durchführen</label>
+		<label index="update.button">Systemdatenbanken aktualisieren</label>
+		<label index="update.info">Änderungen der Datenbank der vorliegenden Version durchführen und mit Datei-Konfiguration vergleichen</label>
+		<label index="update.step">todoyu Installation aktualisieren</label>
+		<label index="updatetocurrentversion.title">Datenbank aktualisieren</label>
+		<label index="updatetocurrentversion.button">Datenbank-Änderungen durchführen</label>
 		<label index="updatetocurrentversion.noupdates">Ihre Datenbank ist auf dem neuesten Stand. Aktualisierung ist nicht notwendig.</label>
 		<label index="updatetocurrentversion.noupdates">Ihre Datenbank ist auf dem neuesten Stand. Aktualisierung ist nicht notwendig.</label>
-		<label index="updatetocurrentversion.updates">Datenbankstruktur Aktualisieren</label>
+		<label index="updatetocurrentversion.updates">Datenbankstruktur aktualisieren</label>
 		<label index="updatetocurrentversion.newTables">Neue Tabellen</label>
 		<label index="updatetocurrentversion.newColumns">Neue Spalten</label>
 		<label index="updatetocurrentversion.changedColumns">Geänderte Spalten</label>
-		<label index="updatetocurrentversion.step">Datenbankstruktur Aktualisieren</label>
+		<label index="updatetocurrentversion.step">Datenbankstruktur aktualisieren</label>
 		<label index="finishupdate.title">Aktualisieren beenden</label>
 		<label index="finishupdate.text">Der Installer hat Ihre todoyu Installation aktualisiert</label>
+		<label index="selectDB">Datenbank auswählen</label>
+		<label index="orCreateDB">Oder neue erstellen:</label>
 	</labels>
 </locallang>
