* Installer message fix for updater

--- a/install/locale/installer.xml
+++ b/install/locale/installer.xml
@@ -63,11 +63,12 @@
 		<label index="finish.button">Disable installer and go to login</label>
 		<label index="finish.step">Finish installation</label>
 		<label index="update.title">todoyu version update</label>
-		<label index="update.button">Update system databases</label>
+		<label index="update.button">Start update</label>
 		<label index="update.info">Apply database changes for your current version and compare current columns with file configuration</label>
 		<label index="update.step">Update todoyu installation</label>
 		<label index="updatetocurrentversion.title">Update database</label>
 		<label index="updatetocurrentversion.button">Apply database changes</label>
+		<label index="updatetocurrentversion.button.noupdates">No updates, next</label>
 		<label index="updatetocurrentversion.noupdates">Your database is up-to-date. No updates necessary</label>
 		<label index="updatetocurrentversion.updates">Your database needs to be updated with the following changes</label>
 		<label index="updatetocurrentversion.step">Update database structure</label>
@@ -80,73 +81,6 @@
 		<label index="finishupdate.step">Finish installation</label>
 		<label index="selectDB">Select a Database</label>
 		<label index="orCreateDB">or create new:</label>
-<!--
-		<label index="installationSteps">Installation steps</label>
-		<label index="servercheckResults">Results of server check:</label>
-		<label index="yourVersion">Your Version:</label>
-		<label index="dbConnectionStored">DB connection is stored.</label>
-		<label index="importTablesAndData">Import database tables and basic table data</label>
-		<label index="repeatPassword">Repeat Password</label>
-		<label index="updateSteps">Update steps</label>
-		<label index="generalUpdate">General update</label>
-		<label index="dbAnalyzer">DB-Analyzer</label>
-		<label index="updateDbChanges">Changes to DB structures since your currently installed version</label>
-		<label index="analyzerInfo">Check for extensions newly added DB tables and columns</label>
-		<label index="error">Error</label>
-		<label index="error.changeAdminPassword">Change admin password for your security!</label>
-		<label index="error.incorrectDbConnectionSetup">Please correct the Database connection setup below:</label>
-		<label index="error.nameTaken">This name is already taken!</label>
-		<label index="error.dbServerConnectionFailed">Database creation / select failed please correct the setup</label>
-		<label index="affirm.dbServerConnectionOk">Database server connection verified</label>
-		<label index="affirm.dbIsUptodate">Congratulations! your database is up to date.</label>
-		<label index="instruction.enterDbConnectionDetails">Please enter the database server connection details:</label>
-		<label index="title.license"></label>
-		<label index="title.welcomeToInstaller">Welcome to the todoyu installer!</label>
-		<label index="title.welcome">Welcome</label>
-		<label index="title.setupDatabaseServerConnection">Setup Database Server Connection</label>
-		<label index="title.setupDatabase">Setup Database</label>
-		<label index="title.dbServerConnectionValidated">Database server connection validated.</label>
-		<label index="title.importTablesAndData">Import Static Data</label>
-		<label index="title.systemConfig">Select your todoyu system settings</label>
-		<label index="title.changeAdminPassword">Change admin password</label>
-		<label index="title.finished">Installation finished</label>
-		<label index="title.welcomeToTodoyuUpdate">Welcome to todoyu update!</label>
-		<label index="title.welcomeToUpdate">Welcome to datebase update</label>
-		<label index="title.doneCoreChanges">The following database updates have been conducted:</label>
-		<label index="title.doneGenericChanges">The following extension tables' updates have been conducted:</label>
-		<label index="title.dbUpdateCheck">Database update check</label>
-		<label index="title.updateFinished">Update finished</label>
-		<label index="step.licenseAgreement">License agreement</label>
-		<label index="step.checkServerCompatibility">Check server compatibility</label>
-		<label index="step.databaseConnectionSetup">Database connection setup</label>
-		<label index="step.importStaticData">Import static data</label>
-		<label index="step.setAdminPassword">Set administrator password</label>
-		<label index="button.updateDbConfig">Update database configuration</label>
-		<label index="button.checkConnectionData">Check connection data</label>
-		<label index="button.saveDatabaseSetup">Save Database Setup</label>
-		<label index="button.genericUpdate">Update extensions tables</label>
-		<label index="button.importTablesAndData">Import tables and data</label>
-		<label index="button.saveConfiguration">Save configuration</label>
-		<label index="button.saveSystemConfiguration">Save system configuration</label>
-		<label index="button.changeAdminPassword">Change admin password</label>
-		<label index="button.disableAndLogIn">Disable installer and go to login</label>
-		<label index="button.dbUpdate">Update system database</label>
-		<label index="button.finishUpdate">Finish update</label>
-		<label index="panel.title.licenseInformation">License information</label>
-		<label index="progress.label.welcome">License agreement</label>
-		<label index="progress.label.servercheck">Check server compatibility</label>
-		<label index="progress.label.dbconnection">Databse server configuration</label>
-		<label index="progress.label.dbselect">Select / create todoyu database</label>
-		<label index="progress.label.staticdata">Import static data</label>
-		<label index="progress.label.systemconfig">General system configuration</label>
-		<label index="progress.label.setadminpassword">Set admin password</label>
-		<label index="progress.label.saveadminpassword">Save Administrator Password</label>
-		<label index="progress.label.welcometoupdate">System database version updates</label>
-		<label index="progress.label.updatetocurrentversion">Extensions database updates</label>
-		<label index="progress.label.dbstructurecheck">Update extensions</label>
-		<label index="progress.label.finishupdate">Update extensions DB tables</label>
-		<label index="progress.label.exit">Start todoyu</label>
--->
 	</labels>
 	<labels lang="de">
 		<label index="panelWidget.title.progress">Installationsschritte</label>
@@ -213,11 +147,12 @@
 		<label index="finish.step">Installation abschliessen</label>
 		<label index="finishupdate.step">Installation abschliessen</label>
 		<label index="update.title">todoyu Versions-Aktualisierung</label>
-		<label index="update.button">Systemdatenbanken aktualisieren</label>
+		<label index="update.button">Aktualisierung starten</label>
 		<label index="update.info">Änderungen der Datenbank der vorliegenden Version durchführen und mit Datei-Konfiguration abgleichen</label>
 		<label index="update.step">todoyu Installation aktualisieren</label>
 		<label index="updatetocurrentversion.title">Datenbank aktualisieren</label>
 		<label index="updatetocurrentversion.button">Datenbank-Änderungen durchführen</label>
+		<label index="updatetocurrentversion.button.noupdates">Keine Aktualisierung, weiter</label>
 		<label index="updatetocurrentversion.noupdates">Ihre Datenbank ist auf dem neuesten Stand. Aktualisierung ist nicht notwendig.</label>
 		<label index="updatetocurrentversion.updates">Ihre Datenbank muss mit den folgenden Änderungen aktualisiert werden.</label>
 		<label index="updatetocurrentversion.newTables">Neue Tabellen</label>
