* minor bugfix in DB update (RC1->RC2) SQL * integrated global record create headlet * improved popup handling (JS, layout) * changed quick task panelwidget into headlet * removed quick event panelwidget

--- a/core/locale/core.xml
+++ b/core/locale/core.xml
@@ -11,6 +11,7 @@
 		<label index="description">Description</label>
 		<label index="date">Date</label>
 		<label index="dateFormat">y.n.j</label>
+		<label index="create">Create</label>
 		<label index="createNew">Create new</label>
 		<label index="edit">Edit</label>
 		<label index="load">Load</label>
